--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   zoo1:
     image: zookeeper:3.4.9
     hostname: zoo1
+    restart: always
     ports:
       - "2181:2181"
     environment:
@@ -17,6 +18,7 @@ services:
   kafka1:
     image: confluentinc/cp-kafka:5.4.1
     hostname: kafka1
+    restart: always
     ports:
       - "9092:9092"
     environment:
